# iTunesLibraryRestorer

./: Cargo.toml  SampleLibrary.xml
src/: file_info.rs  file_restorer.rs  main.rs  song_info.rs  song_parser.rs  xml_parser.rs
src/parsers/: mod.rs  song_parser.rs  xml_parser.rs
src/services/: file_restorer.rs  mod.rs
src/structs/: file_info.rs  mod.rs  song_info.rs
