[package]
name = "iTunesLibraryRestorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = [] }
const_format = { version = "0.2.32", features = [] }
mp3-metadata = { version = "0.3.4", features = [] }